--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
+
+<head>
+    <title>
+        <%= title %>
+    </title>
+    <link rel='stylesheet' href='/css/bootstrap.min.css' />
+    <link rel='stylesheet' href='/css/bootstrap-theme.min.css' />
+    <link rel='stylesheet' href='/css/style.css' />
     <script src='/js/jquery.min.js'></script>
     <script src='/js/bootstrap.min.js'></script>
-    <link rel='stylesheet' href='/css/bootstrap.min.css' />
-    <link rel='stylesheet' href='/css/style.css' />
-  </head>
-  <body>
-    <div class="contrainer">
-        <h1><%= title %></h1>
-        <p>Welcome to <%= title %></p>
+</head>
+
+<body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Fresh Fruit</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Category</a></li>
+                    <li><a href="#">About us</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Sign In</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <h2 label><%= title%></h2>
+        <p>Happy every day</p>
     </div>
-    
-    
-  </body>
+</body>
+
 </html>
