--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     </title>
     <link rel='stylesheet' href='/css/bootstrap.min.css' />
     <link rel='stylesheet' href='/css/bootstrap-theme.min.css' />
-    <link rel='stylesheet' href='/css/style.css' />
+    <link rel='stylesheet' href='/css/index.css' />
     <script src='/js/jquery.min.js'></script>
     <script src='/js/bootstrap.min.js'></script>
 </head>
@@ -29,9 +29,14 @@
             </div>
         </div>
     </nav>
-    <div class="container">
-        <h2 label><%= title%></h2>
-        <p>Happy every day</p>
+    <div class="container-fluid">
+        <div class="header">
+            <h2><%= title%></h2>
+            <p>Happy every day</p>
+        </div>
+
+        <div class="content"></div>
+        <div class="footer"></div>
     </div>
 </body>
 
