--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,42 +2,26 @@
 <html>
 
 <head>
-    <title>
-        <%= title %>
-    </title>
-    <link rel='stylesheet' href='/css/bootstrap.min.css' />
-    <link rel='stylesheet' href='/css/bootstrap-theme.min.css' />
-    <link rel='stylesheet' href='/css/index.css' />
-    <script src='/js/jquery.min.js'></script>
-    <script src='/js/bootstrap.min.js'></script>
+    <% include partials/head.ejs %>
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <header>
+        <% include partials/header.ejs %>
+    </header>
+    <main>
         <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Fresh Fruit</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">Category</a></li>
-                    <li><a href="#">About us</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Sign In</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container-fluid">
-        <div class="header">
-            <h2><%= title%></h2>
-            <p>Happy every day</p>
-        </div>
+            <header>
+                <h2><%= title%></h2>
+                <p>Happy every day</p>
+            </header>
 
-        <div class="content"></div>
-        <div class="footer"></div>
-    </div>
+            <div class="content"></div>
+        </div>
+    </main>
+    <footer>
+        <% include partials/footer.ejs %>
+    </footer>
 </body>
 
 </html>
