--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,15 +5,14 @@
     <% include partials/head.ejs %>
 </head>
 
-<body>
+<body class="width-fluid">
     <header>
         <% include partials/header.ejs %>
     </header>
     <main>
-        <div class="container-fluid">
-            <header>
-                <h2><%= title%></h2>
-                <p>Happy every day</p>
+        <div class="container-fluid width-fluid">
+            <header class="padding-left-top-7 bg-primary">
+                <h1 class="clear-margin-top"><%= title%></h1>
             </header>
 
             <div class="content"></div>
