--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
+            <div class="container-fluid padding-left-7">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Fresh Fruit</a>
                 </div>
