Tony - index UI refine and add products block

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,11 +11,15 @@
     </header>
     <main>
         <div class="container-fluid width-fluid">
-            <header class="padding-left-top-7 bg-primary">
+            <header class="padding-left-top-5 bg-primary">
                 <h1 class="clear-margin-top"><%= title%></h1>
             </header>
 
-            <div class="content"></div>
+            <div class="content">
+                <div >
+
+                </div>
+            </div>
         </div>
     </main>
     <footer>
