Tony - add bookshelf for mqsql for fruit mart

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,10 +14,11 @@
             <header class="padding-left-top-5 bg-primary">
                 <h1 class="clear-margin-top"><%= title%></h1>
             </header>
-
             <div class="content">
-                <div >
-
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4"></div>
                 </div>
             </div>
         </div>
