--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,10 +15,7 @@
                 <h1 class="clear-margin-top"><%= title%></h1>
             </header>
             <div class="content">
-                <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
+                <div id="productList" class="row">
                 </div>
             </div>
         </div>
