--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,5 +4,6 @@
     <link rel='stylesheet' href='/css/bootstrap.min.css' />
     <link rel='stylesheet' href='/css/bootstrap-theme.min.css' />
     <link rel='stylesheet' href='/css/index.css' />
-    <script src='/js/jquery.min.js'></script>
-    <script src='/js/bootstrap.min.js'></script>
+    <script type="text/javascript" src='/js/jquery.min.js'></script>
+    <script type="text/javascript" src='/js/bootstrap.min.js'></script>
+    <script type="text/javascript" src='/js/index.js'></script>
