Tony - server response render ejs variable

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,24 @@
-<!DOCTYPE html>
-<html>
+<% include partials/head.ejs %>
 
-<head>
-    <% include partials/head.ejs %>
-</head>
-
-<body class="width-fluid">
-    <header>
+    <body class="width-fluid">
         <% include partials/header.ejs %>
-    </header>
-    <main>
-        <div class="container-fluid width-fluid">
-            <header class="padding-left-top-5 bg-primary">
-                <h1 class="clear-margin-top"><%= title%></h1>
-            </header>
-            <div class="content">
-                <div id="productList" class="row">
+            <main>
+                <div class="container-fluid width-fluid">
+                    <header class="padding-left-top-5 bg-primary">
+                        <h1 class="clear-margin-top"><%= title%></h1>
+                    </header>
+                    <div class="content container">
+                        <div id="productList" class="row">
+                            <% products.forEach(function(product) {%>
+                                <h2>
+                                     <a><%= product.name %></a>
+                                </h2>
+                                <% }); %>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <% include partials/footer.ejs %>
-    </footer>
-</body>
+            </main>
+            <% include partials/footer.ejs %>
+    </body>
 
-</html>
+    </html>
