--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,9 @@
-<title>
+<!DOCTYPE html>
+<html>
+
+<head>
+
+    <title>
         <%= title %>
     </title>
     <link rel='stylesheet' href='/css/bootstrap.min.css' />
@@ -7,3 +12,4 @@
     <script type="text/javascript" src='/js/jquery.min.js'></script>
     <script type="text/javascript" src='/js/bootstrap.min.js'></script>
     <script type="text/javascript" src='/js/index.js'></script>
+</head>
