--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,18 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid padding-left-5">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Fresh Fruit</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#">Category</a></li>
-                        <li><a href="#">About us</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Sign In</a></li>
-                    </ul>
-                </div>
+<header>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid padding-left-5">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Fresh Fruit</a>
             </div>
-        </nav>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Category</a></li>
+                    <li><a href="#">About us</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Sign In</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
