--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,13 @@
-<% include partials/head.ejs %>
-
-    <body class="width-fluid">
-        <% include partials/header.ejs %>
-            <main>
-                <div class="container-fluid width-fluid">
-                    <header class="padding-left-top-5 bg-primary">
-                        <h1 class="clear-margin-top"><%= title%></h1>
-                    </header>
-                    <div class="content container">
-                        <div id="productList" class="row">
-                            <% products.forEach(function(product) {%>
-                                <h2>
-                                     <a><%= product.name %></a>
-                                </h2>
-                                <% }); %>
-                        </div>
-                    </div>
-                </div>
-            </main>
-            <% include partials/footer.ejs %>
-    </body>
-
-    </html>
+<% layout('layout') -%>
+    <div class="container-fluid width-fluid">
+        <header class="padding-left-top-5 bg-primary">
+            <h1 class="clear-margin-top"><%= title%></h1>
+        </header>
+        <div class="content container">
+            <div id="productList" class="row">
+                <% products.forEach(function(product) {%>
+                    <h2><a><%= product.name %></a></h2>
+                    <% }); %>
+            </div>
+        </div>
+    </div>
