--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
                     <li><a href="#">About us</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Sign In</a></li>
+                    <li><a href="/login">Sign In</a></li>
                 </ul>
             </div>
         </div>
