--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,15 +4,15 @@
             <div class="col-md-6">
                 <form class="form-horizontal" method="post" action="/login">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                        <label for="username" class="col-sm-2 control-label">Email</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                            <input name="username" type="email" class="form-control" id="username" placeholder="username">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                        <label for="password" class="col-sm-2 control-label">Password</label>
                         <div class="col-sm-10">
-                            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                            <input name="password" type="password" class="form-control" id="password" placeholder="password">
                         </div>
                     </div>
                     <div class="form-group">
