--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,9 +1,13 @@
 <% include partials/head.ejs %>
+
     <body class="width-fluid">
         <% include partials/header.ejs %>
-        <main>
-            <%- body %>
-        </main>
-        <% include partials/footer.ejs %>
+            <header class="padding-left-top-5 bg-primary">
+                <h1 class="clear-margin-top"><%= title%></h1>
+            </header>
+            <main>
+                <%- body %>
+            </main>
+            <% include partials/footer.ejs %>
     </body>
-</html>
+    </html>
