--- a/views/saleAdmin.ejs
+++ b/views/saleAdmin.ejs
@@ -1,13 +1,13 @@
 <% layout('layout') -%>
     <div class="container jumbotron">
-        <form>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        <form method="POST" action="/admin">
+            <div class="form-group" 
+                <label for="inputProductName">Product Name:</label>
+                <input type="text" class="form-control" id="inputProductName" placeholder="name" name="name">
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <label for="inputPrice">Price:</label>
+                <input type="text" class="form-control" id="inputPrice" placeholder="price" name="price">
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">Add Product</button>
     </div>
