--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,38 @@
     <div class="container-fluid width-fluid">
         <div class="content container">
             <div id="productList" class="row">
-                <% products.forEach(function(product) {%>
-                    <h2><span><%= product.name %></span></h2>
-                    <h5><span><%= product.price %></span></h5>
-                    <% }); %>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Product Id</th>
+                            <th>Product Name</th>
+                            <th>Price</th>
+                            <th>Invertory</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% products.forEach(function(product) {%>
+                            <tr>
+                                <th>
+                                    <%= product.id %>
+                                </th>
+                                <th>
+                                    <%= product.name %>
+                                </th>
+                                <th>
+                                    <%= product.price %>
+                                </th>
+                                <th>
+                                    <%= product.number %>
+                                </th>
+                                <th>
+                                    <a class="product_list_action" href="/api/search/<%= product.id %>">Edit</a>
+                                </th>
+                            </tr>
+                            <% }); %>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
