--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,24 +1,26 @@
 <header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid padding-left-5">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Fresh Fruit</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">Category</a></li>
-                    <li><a href="#">About us</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/login">Log In
+    <nav class="navbar navbar-default navbar-fixed-top" <div class="container-fluid padding-left-5">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">Fresh Fruit</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="#">Category</a></li>
+                <li><a href="#">About us</a></li>
+                <li class="<%= typeof role === 'undefined' ? 'hide' : 'show' %>">
+                    <a href="/admin">Seller Center</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="/login">Log In
                             <span><%= typeof username!='undefined' ? username : ''%></span></a>
-                    </li>
-                    <li class="<%= typeof username === 'undefined' ? "show" : "hide" %>">
-                        <a href="/Signup">Sign In</a>
-                    </li>
-                </ul>
-            </div>
+                </li>
+                <li class="<%= typeof username === 'undefined' ? " show " : "hide " %>">
+                    <a href="/Signup">Sign In</a>
+                </li>
+            </ul>
+        </div>
         </div>
     </nav>
 </header>
