--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layout') -%>
     <div class="container-fluid width-fluid">
-        <div class="content container">
+        <div id="IndexProductList" class="content container">
             
         </div>
     </div>
