--- a/views/saleAdmin.ejs
+++ b/views/saleAdmin.ejs
@@ -48,12 +48,6 @@
                 <label for="inputInvertory">Invertory:</label>
                 <input type="text" class="form-control" id="inputInvertory" placeholder="invertory" name="invertory" value="<%= typeof product === 'undefined' ? '' : product.number%>">
             </div>
-
-            <% if(typeof product === 'undefined') {%>
-
-                <button type="submit" class="btn btn-default">Add Product</button>
-
-                <%} else {%>
-                    <button type="submit" class="btn btn-default">Update Product</button>
-                    <%}%>
+            <button type="submit" class="btn btn-default"><%= typeof product === 'undefined' ? 'Add ' : 'Update '%>Product</button>
+            <button type="submit" class="btn btn-default saleCancel">Cancel</button>
     </div>
